added database reference

--- a/main.html
+++ b/main.html
@@ -3,5 +3,8 @@
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
   </head>
   <body>
+    <script>
+        var myDataRef = new Firebase('https://attendance-tracker.firebaseIO.com/');
+    </script>
   </body>
 </html>
