--- a/main.html
+++ b/main.html
@@ -3,6 +3,9 @@
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
   </head>
   <body>
+    <input type="text" id="nameField" placeholder="Name">
+    <input type="text" id="orgField" placeholder="Organization">
+    <input type="text" id="contactField" placeholder="Contact">
     <script>
         var myDataRef = new Firebase('https://attendance-tracker.firebaseIO.com/');
     </script>
